; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/host/extr_minilua.c_add_value.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/host/extr_minilua.c_add_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@.str = private unnamed_addr constant [33 x i8] c"invalid replacement value (a %s)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32*, i8*, i8*)* @add_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_value(%struct.TYPE_6__* %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %9, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = call i32 @lua_type(i32* %14, i32 3)
  switch i32 %15, label %39 [
    i32 3, label %16
    i32 4, label %16
    i32 6, label %22
    i32 5, label %32
  ]

16:                                               ; preds = %4, %4
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @add_s(%struct.TYPE_6__* %17, i32* %18, i8* %19, i8* %20)
  br label %68

22:                                               ; preds = %4
  %23 = load i32*, i32** %9, align 8
  %24 = call i32 @lua_pushvalue(i32* %23, i32 3)
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = call i32 @push_captures(%struct.TYPE_6__* %25, i8* %26, i8* %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32*, i32** %9, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @lua_call(i32* %29, i32 %30, i32 1)
  br label %39

32:                                               ; preds = %4
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %34 = load i8*, i8** %7, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @push_onecapture(%struct.TYPE_6__* %33, i32 0, i8* %34, i8* %35)
  %37 = load i32*, i32** %9, align 8
  %38 = call i32 @lua_gettable(i32* %37, i32 3)
  br label %39

39:                                               ; preds = %4, %32, %22
  %40 = load i32*, i32** %9, align 8
  %41 = call i32 @lua_toboolean(i32* %40, i32 -1)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %55, label %43

43:                                               ; preds = %39
  %44 = load i32*, i32** %9, align 8
  %45 = call i32 @lua_pop(i32* %44, i32 1)
  %46 = load i32*, i32** %9, align 8
  %47 = load i8*, i8** %7, align 8
  %48 = load i8*, i8** %8, align 8
  %49 = load i8*, i8** %7, align 8
  %50 = ptrtoint i8* %48 to i64
  %51 = ptrtoint i8* %49 to i64
  %52 = sub i64 %50, %51
  %53 = trunc i64 %52 to i32
  %54 = call i32 @lua_pushlstring(i32* %46, i8* %47, i32 %53)
  br label %65

55:                                               ; preds = %39
  %56 = load i32*, i32** %9, align 8
  %57 = call i32 @lua_isstring(i32* %56, i32 -1)
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %64, label %59

59:                                               ; preds = %55
  %60 = load i32*, i32** %9, align 8
  %61 = load i32*, i32** %9, align 8
  %62 = call i32 @luaL_typename(i32* %61, i32 -1)
  %63 = call i32 @luaL_error(i32* %60, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %62)
  br label %64

64:                                               ; preds = %59, %55
  br label %65

65:                                               ; preds = %64, %43
  %66 = load i32*, i32** %6, align 8
  %67 = call i32 @luaL_addvalue(i32* %66)
  br label %68

68:                                               ; preds = %65, %16
  ret void
}

declare dso_local i32 @lua_type(i32*, i32) #1

declare dso_local i32 @add_s(%struct.TYPE_6__*, i32*, i8*, i8*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @push_captures(%struct.TYPE_6__*, i8*, i8*) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i32 @push_onecapture(%struct.TYPE_6__*, i32, i8*, i8*) #1

declare dso_local i32 @lua_gettable(i32*, i32) #1

declare dso_local i32 @lua_toboolean(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1

declare dso_local i32 @lua_isstring(i32*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1

declare dso_local i32 @luaL_typename(i32*, i32) #1

declare dso_local i32 @luaL_addvalue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
